--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.6.0",
+    "lucide-react": "^0.555.0",
     "next": "15.5.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
