--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
-    "next": "15.5.6",
+    "next": "^15.5.9",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -21,7 +21,7 @@
     "@types/react-dom": "18.3.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^15.5.9",
     "postcss": "8.4.31",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
