--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,19 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@/ui/*": [
+        "./src/components/ui/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ]
+    }
   },
   "include": [
     "**/*.ts",
